cmake_minimum_required(VERSION 3.16)
project(algobench VERSION 0.1)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --stdlib=libc++")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
add_subdirectory(benchmark)
add_executable(sortbench algorithms.bench.cpp)
target_link_libraries(sortbench benchmark::benchmark)
add_executable(filesize_int filesize_int.cpp)
add_executable(filesize_tuuple filesize_tuple.cpp)
add_executable(filesize_pdq_int filesize_pdq_int.cpp)
add_executable(filesize_pdq_tuple filesize_pdq_tuple.cpp)
